# lightweight-f1-25-telemetry

./: .gitignore  INSTALLER.md  README.md  build_windows.bat  debugger.py  f1-telemetry-overlay.iss  main.py  publish-release.bat  pyproject.toml  pyrightconfig.json  requirements-dev.txt  requirements.txt
.github/workflows/: release.yml
tests/: test_telemetry_parser.py
